test/libsolidity/syntaxTests/inlineAssembly/if_statement_invalid_1.sol
contract C {
    function f() public pure {
        assembly {
            if mload {}
        }
    }
}
// ----
// ParserError 2314: (84-85): Expected '(' but got '{'
